# AG-SCL-for-Long-Tailed-ECG

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: ptbxl_ag_scl.yaml
docs/assets/: SOURCES.md
examples/: inference.py  minimal_training.py
src/ag_scl/: __init__.py  augmentation.py  config.py  heads.py  loss.py  method.py  model.py  statistics.py  swin.py  transforms.py
tests/: common.py  test_augmentation.py  test_config.py  test_loss.py  test_method.py  test_public_hygiene.py
